v4-dev (20200120)
* Added a synonym to nationalities
* Added a few more to italian and politics

v4-dev (20200119)
* Added support for boxes

v3 stable (20191208)
Summary of changes since v2.1:
* Add visibility support (introduces a new required command line parameter - remember to update your crontabs with this version!)
* Added potion support
* Added generation of fake dark web domains (incl .i2p, .onion, and urban legend TLDs)
* Added "shadow web"/"shadow net" support (idea by `@asylore@neckbeard.xyz`)
* Added "sports" list
* Added more to conspiracy
* Added CONTRIBUTING.md with contact information for suggestions
* Added CODE_OF_CONDUCT.md with contents "Dark Web Mystery Bot exists for the sole purpose of entertainment."

v3-dev (20191205)
* Added "shadow web"/"shadow net" support (idea by `@asylore@neckbeard.xyz`)

v3-dev (20191203)
* Added more to conspiracy

v3-dev (20191202-r1)
* Fixed bug with safe space mode

v3-dev (20191202)
* Comment added to dwmbot.py
* Put lists in alphabetical order in the file
* Add visibility support (introduces a new required command line parameter - remember to update your crontabs with this version!)

v3-dev (20191127)
* Spun off separate pickword() function in preparation for new possibilities
* Added potion support
* Added generation of fake dark web domains (incl .i2p, .onion, and urban legend TLDs)
* Added "sports" list
* Redid probabilities

v2.1 stable (20191126)
Summary of changes since v1:
* Added "safe space mode" which avoids posting politically incorrect content
* Added option to post version in unlisted mode
* Added "nationalities" list (nationalities, ethnicities, races)
* Added "occupations" list (based on the studies list)
* Added more content to the lists

v2-dev (20191119)
* Added "nationalities" list (nationalities, ethnicities, races)
* Added more to conspiracy and medieval

v2-dev (20191117)
* Typo fixed in README.md

v2-dev (20191116)
* Added "occupations" list (based on the studies list)