@@ -42,7 +42,7 @@ prefix = ["dark net","dark web","deep web","marianas net","marianas web","shadow
 faketld = ["clos","dafy","end","i2p","loky","nept","onion","taur"]
 
 #conspiracy (conspiracy theories, pseudoscience, aliens, the occult, etc.)
-conspiracy = ["agenda","alchemy","alien","antichrist","assassination","astrology","aura","birther","bodycount","cabal","camp","clairvoyance","classified","conspiracy","control","creationism","creepypasta","cryptozoology","deathpanel","deepstate","demolition","demon","denial","detention","ectoplasm","extermination","extraterrestrial","falseflag","fluoride","foreknowledge","freemasonry","gaybomb","genocide","ghost","ghosthunting","glyphosate","guidestones","hallucination","homeopathy","horoscope","illuminati","infowar","infowarrior","interrogation","intelligence","intuition","jesuit","magick","masonry","massacre","missing","mkultra","mindreading","monarch","nibiru","nostradamus","occultism","orb","order","paranoia","paranormal","pizzagate","plot","poison","population","possession","power","precognition","projection","prophecy","prophet","pseudohistory","pseudoscience","psychic","reincarnation","remote","reptilian","ritual","revisionism","roswell","satanism","sandyhook","seance","secret","shaman","silverstein","soros","specter","spirit","spiritualism","supernatural","superstition","surveillance","telekinesis","telepathy","tinfoil","torture","truther","vaccination","vaccine","vampire","viewing","zionist"]
+conspiracy = ["agenda","alchemy","alien","antichrist","assassination","astrology","aura","autism","birther","bodycount","brainwashing","cabal","camp","chemtrail","chemtrails","clairvoyance","classified","conspiracy","control","creationism","creepypasta","cryptozoology","deathpanel","deepstate","demolition","demon","denial","detention","ectoplasm","extermination","extraterrestrial","fakenews","fallacy","falseflag","fluoride","foreknowledge","freemasonry","gaybomb","gayfrog","genocide","ghost","ghosthunting","glyphosate","guidestones","hallucination","homeopathy","horoscope","illuminati","infowar","infowarrior","infowars","interrogation","intelligence","intuition","jesuit","magick","masonry","massacre","mercury","missing","mkultra","mindcontrol","mindreading","monarch","nibiru","nostradamus","occultism","orb","order","paranoia","paranormal","pizzagate","plot","poison","population","possession","power","precognition","projection","prophecy","prophet","pseudohistory","pseudolaw","pseudoscience","psychic","radiation","reincarnation","remote","reptilian","ritual","revisionism","roswell","satanism","sandyhook","seance","secret","shaman","silverstein","soros","sovereign","specter","spirit","spiritualism","supernatural","superstition","surveillance","telekinesis","telepathy","thimerosal","tinfoil","torture","truther","vaccination","vaccine","vampire","viewing","zionist"]
 
 #italian (italian food, italian-american foods, pizza toppings)
 italian = ["alfredo","anchovy","artichoke","arugula","asiago","bacon","basil","bologna","bread","broccoli","calamari","cannoli","capicola","cheese","chicken","egg","eggplant","fettucine","garlic","gelato","gorgonzola","jalapeno","ham","lasagna","linguine","macaroni","meatball","meatlovers","mozzarella","mushroom","olive","onion","oregano","parmesan","pasta","peperoncini","pepper","pepperoni","pineapple","pizza","prosciutto","provolone","ravioli","ricotta","risotto","romano","salami","sausage","seafood","shellfish","spaghetti","spinach","supreme","tomato","tortellini","ziti"]
@@ -51,19 +51,19 @@ italian = ["alfredo","anchovy","artichoke","arugula","asiago","bacon","basil","b
 medieval = ["amulet","apprentice","banishment","banshee","beanstalk","bear","beast","bridge","carpet","castle","cauldron","chalice","changeling","crossbow","crown","crusader","crusades","crystal","curse","damsel","dragon","drawbridge","dungeonmaster","dwarf","elf","fairy","fantasy","folktale","frog","genie","giant","gnome","goblin","godmother","gown","grail","guillotine","hag","hangman","harem","hero","heroine","imp","inquisitor","jester","joust","howl","kettle","king","kingdom","knight","lady","land","legend","leprechaun","lord","lore","magic","magician","mace","maiden","mask","mirror","monk","monster","moon","myth","necromancer","newt","nun","ogre","orc","paladin","pegasus","pixie","prince","princess","protector","quail","queen","quest","rack","realm","reign","robe","roundtable","sage","sandman","scepter","scroll","shapeshifter","slippers","soothsayer","sorcerer","spear","spell","spider","sprite","staff","stepmother","sultan","sword","swordfight","talisman","toad","torch","tower","troll","unicorn","valiant","valor","vanquish","vizier","wail","wand","warlock","warrior","werewolf","witch","wizard","wolf"]
 
 #nationalities (nationalities, ethnicities, races)
-nationalities = ["afghan","african","albanian","algerian","american","andorran","angolan","argentine","argentinian","armenian","asian","australian","austrian","azerbaijani","bahamian","bangladeshi","barbadian","belarusian","belgian","beninese","bhutanese","bolivian","bosnian","brazilian","brit","briton","bruneian","bulgarian","burmese","burundian","cambodian","cameroonian","canadian","caucasian","chadian","chilean","chinese","colombian","congolese","croat","croatian","cuban","cypriot","czech","dane","dominican","dutchman","dutchwoman","ecuadorian","egyptian","emirati","englishman","englishwoman","eritrean","estonian","ethiopian","european","fijian","filipino","finn","frenchman","frenchwoman","gabonese","gambian","georgian","german","ghanaian","greek","grenadian","guatemalan","guinean","guyanese","haitian","hawaiian","hispanic","honduran","hungarian","icelander","indian","indonesian","iranian","iraqi","irishman","irishwoman","islander","israeli","italian","ivorian","jamaican","japanese","jordanian","kazakh","kazakhistani","kenyan","korean","kuwaiti","laotian","latvian","lebanese","liberian","libyan","liechtensteiner","lithuanian","luxembourger","macedonian","madagascan","malagasy","malawian","malaysian","maldivian","malian","maltese","mauritanian","mauritian","mexican","moldovan","monacan","mongolian","montenegrin","moroccan","mozambican","namibian","native","nepalese","nicaraguan","nigerian","nigerien","norwegian","omani","pakistani","panamanian","paraguayan","peruvian","pole","portuguese","qatari","romanian","russian","rwandan","salvadoran","salvadorean","salvadorian","saudi","scot","senegalese","serb","serbian","singaporean","slovak","slovenian","somali","somalian","spaniard","sudanese","surinamese","swazi","swede","swiss","syrian","taiwanese","tadzhik","tajik","tanzanian","thai","togolese","trinidadian","tunisian","turk","turkmen","ugandan","ukrainian","uruguayan","uzbek","venezuelan","vietnamese","welshman","welshwoman","yemeni","yugoslav","zambian","zimbabwean"]
+nationalities = ["afghan","african","albanian","algerian","american","andorran","angolan","argentine","argentinian","armenian","asian","australian","austrian","azerbaijani","bahamian","bangladeshi","barbadian","belarusian","belgian","beninese","bhutanese","bolivian","bosnian","brazilian","brit","briton","bruneian","bulgarian","burmese","burundian","cambodian","cameroonian","canadian","caucasian","chadian","chilean","chinese","colombian","congolese","croat","croatian","cuban","cypriot","czech","dane","dominican","dutchman","dutchwoman","ecuadorian","egyptian","emirati","englishman","englishwoman","eritrean","estonian","ethiopian","european","fijian","filipino","finn","frenchman","frenchwoman","gabonese","gambian","georgian","german","ghanaian","greek","grenadian","guatemalan","guinean","guyanese","haitian","hawaiian","hispanic","honduran","hungarian","icelander","indian","indonesian","iranian","iraqi","irishman","irishwoman","islander","israeli","italian","ivorian","jamaican","japanese","jew","jordanian","kazakh","kazakhistani","kenyan","korean","kuwaiti","laotian","latvian","lebanese","liberian","libyan","liechtensteiner","lithuanian","luxembourger","macedonian","madagascan","malagasy","malawian","malaysian","maldivian","malian","maltese","mauritanian","mauritian","mexican","moldovan","monacan","mongolian","montenegrin","moroccan","mozambican","namibian","native","nepalese","nicaraguan","nigerian","nigerien","norwegian","omani","pakistani","palestinian","panamanian","paraguayan","peruvian","pole","portuguese","qatari","romanian","russian","rwandan","salvadoran","salvadorean","salvadorian","saudi","scot","senegalese","serb","serbian","singaporean","slovak","slovenian","somali","somalian","spaniard","sudanese","surinamese","swazi","swede","swiss","syrian","taiwanese","tadzhik","tajik","tanzanian","thai","togolese","trinidadian","tunisian","turk","turkmen","ugandan","ukrainian","uruguayan","uzbek","venezuelan","vietnamese","welshman","welshwoman","yemeni","yugoslav","zambian","zimbabwean"]
 
-#occupations (based on the studies list)
-occupations = ["accountant","analyzer","anatomist","anesthesiologist","anthropologist","archeologist","artist","astronaut","astronomer","astrophysicist","biologist","biochemist","botanist","cardiologist","chemist","climatologist","cosmologist","criminologist","cybernetician","dancer","dentist","dermatologist","designer","director","doctor","ecologist","economist","endocrinologist","engineer","ethicist","evolutionist","gastroenterologist","geneticist","geographer","gynecologist","hematologist","hepatologist","historian","linguist","logician","manager","marketer","mathematician","metaphysicist","mechanist","musician","nanotechnologist","nephrologist","neurologist","neurosurgeon","nurse","nutritionist","oncologist","operator","ophthalmologist","optometrist","paleontologist","pathologist","pediatrician","pharmacist","pharmacologist","philosopher","physician","podiatrist","priest","producer","programmer","psychiatrist","psychologist","psychoanalyst","pulmonologist","rheumatologist","robot","scientist","sociologist","spy","statistician","surgeon","technician","theologian","theorist","therapist","toxicologist","writer","zoologist"]
+#occupations (originally based on the studies list)
+occupations = ["accountant","administrator","agent","analyzer","anatomist","anesthesiologist","anthropologist","archeologist","artist","astronaut","astronomer","astrophysicist","biologist","biochemist","botanist","cardiologist","chemist","climatologist","cosmologist","criminologist","cybernetician","dancer","dentist","dermatologist","designer","developer","director","doctor","ecologist","economist","endocrinologist","engineer","ethicist","evolutionist","gastroenterologist","geneticist","geographer","gynecologist","hematologist","hepatologist","historian","linguist","logician","manager","marketer","mathematician","metaphysicist","mechanist","musician","nanotechnologist","nephrologist","neurologist","neurosurgeon","nurse","nutritionist","oncologist","operator","ophthalmologist","optometrist","paleontologist","pathologist","pediatrician","pharmacist","pharmacologist","philosopher","physician","podiatrist","priest","producer","programmer","psychiatrist","psychologist","psychoanalyst","pulmonologist","rheumatologist","robot","scientist","sociologist","spy","statistician","surgeon","sysadmin","technician","theologian","theorist","therapist","toxicologist","writer","zoologist"]
 
 #politics (related to us politics)
-politics = ["abortion","abuse","agreement","amendment","antifa","antitrust","arbitration","argument","arms","assault","backdoor","barack","bathroom","bernie","bias","biden","bigotry","bill","bisexuality","breakup","bush","capitalism","case","catholic","catholicism","censorship","cheney","christian","christianity","church","climate","clinton","collusion","communism","congress","congressman","congresswoman","correctness","corruption","constitution","court","crime","criminal","debate","democracy","democrat","discrimination","drugs","execution","executive","fascism","fearmonger","feminism","fracking","freedom","gay","gender","gore","guns","harassment","hate","hatemonger","hatred","heteronormative","heterosexual","hillary","hoax","homophobia","homosexuality","house","hydrofracture","immigrant","immigration","impeachment","incel","intersex","judiciary","justice","law","legislature","lesbian","marijuana","marriage","masculinity","media","military","minority","obama","obscenity","partisan","party","patriarchy","pedophilia","penalty","pence","piracy","police","politics","pornography","presidency","president","privacy","property","polyamory","queer","racism","religion","representative","republican","rights","sanders","scandal","senate","senator","sexuality","sexism","socialism","speech","state","strawman","tariff","terror","terrorism","theft","trade","transgender","toxic","transphobia","treaty","trump","truth","undocumented","unlawful","wall","war","warming","xenophobia"]
+politics = ["abortion","abuse","agency","agreement","amendment","antifa","antitrust","arbitration","argument","arms","assault","backdoor","barack","based","bathroom","bernie","bias","biden","bigotry","bill","bisexuality","breakup","bush","capital","capitalism","capitol","cartel","case","catholic","catholicism","censorship","cheney","christian","christianity","church","climate","clinton","college","collusion","communism","congress","congressman","congresswoman","correctness","corruption","constitution","court","coverage","crime","criminal","debate","democracy","democrat","discrimination","drugs","election","elector","execution","executive","extremist","fascism","fearmonger","feminism","fentanyl","fracking","freedom","gay","gender","gore","guncontrol","guns","harassment","hate","hatemonger","hatred","heteronormative","heterosexual","hillary","hoax","holocaust","homophobia","homosexuality","house","hydrofracture","immigrant","immigration","impeachment","incel","indecency","insurance","intersex","islam","judiciary","justice","law","legislature","lesbian","marijuana","marriage","masculinity","media","medicare","military","minority","muslim","narcotics","news","obama","obscenity","opinion","opioid","partisan","party","patriarchy","pedophilia","penalty","pence","pepe","piracy","police","politics","pornography","presidency","president","privacy","property","polyamory","queer","racism","redpill","redpilled","religion","representative","republican","resources","rights","sanders","scandal","senate","senator","sexuality","sexism","socialism","socialsecurity","speech","state","strawman","tariff","terror","terrorism","terrorist","theft","trade","transgender","toxic","transphobia","treaty","trump","truth","undocumented","unlawful","wall","war","warming","washington","xenophobia"]
 
 #sports (professional sports, extreme sports, martial arts)
 sports = ["aikido","archery","athletics","badminton","baseball","basketball","biking","billiards","bouldering","bowling","boxing","canoeing","climbing","cricket","curling","cycling","darts","diving","equestrian","fencing","fishing","football","gliding","golf","gymnastics","handball","hockey","hunting","jai-alai","judo","jiu-jitsu","jumping","karate","kickboxing","motocross","motorsport","mountaineering","netball","ninjutsu","olympics","paragliding","parasailing","pentathlon","pool","racing","riding","rollerblading","rollerskating","rowing","running","rugby","sailing","sandboarding","shooting","skateboarding","skating","skiing","skydiving","snooker","snowboarding","soccer","softball","squash","sumo","surfing","swimming","taekwondo","tennis","volleyball","weightlifting","wrestling","yoga"]
 
 #studies (academic studies)
-studies = ["accounting","aerobics","aerodynamics","aerospace","algebra","analysis","anatomy","anesthesiology","anthropology","archeology","art","arts","astronomy","astrophysics","biology","biochemistry","botany","business","calculus","cardiology","chemistry","climatology","computing","cosmology","criminology","cybernetics","dance","dentistry","dermatology","design","ecology","economics","electronics","endocrinology","energy","engineering","ethics","evolution","film","finance","fitness","forensics","gastroenterology","genetics","geography","geometry","geriatrics","gynecology","hematology","hepatology","history","humanities","language","languages","linguistics","literature","logic","management","marketing","mathematics","medicine","metaphysics","macroeconomics","mechanics","microeconomics","music","nanotechnology","nephrology","neurology","neurosurgery","nursing","nutrition","obstetrics","oncology","operations","ophthalmology","optometry","paleontology","pathology","pediatrics","pharmacology","pharmaceuticals","philosophy","physics","podiatry","probability","programming","psychiatry","psychology","psychoanalysis","pulmonology","radiology","rehabilitation","rheumatology","robotics","science","security","sociology","statistics","surgery","surveillance","systems","technology","television","theater","theology","theory","therapy","thermodynamics","toxicology","trigonometry","writing","zoology"]
+studies = ["accounting","administration","aerobics","aerodynamics","aerospace","algebra","analysis","anatomy","anesthesiology","anthropology","archeology","art","arts","astronomy","astrophysics","biology","biochemistry","botany","business","calculus","cardiology","chemistry","climatology","computing","cosmology","criminology","cybernetics","dance","dentistry","dermatology","design","development","ecology","economics","electronics","endocrinology","energy","engineering","ethics","evolution","film","finance","fitness","forensics","gastroenterology","genetics","geography","geometry","geriatrics","gynecology","hematology","hepatology","history","humanities","language","languages","linguistics","literature","logic","management","marketing","mathematics","medicine","metaphysics","macroeconomics","mechanics","microeconomics","music","nanotechnology","nephrology","neurology","neurosurgery","nursing","nutrition","obstetrics","oncology","operations","ophthalmology","optometry","paleontology","pathology","pediatrics","pharmacology","pharmaceuticals","philosophy","physics","podiatry","probability","programming","psychiatry","psychology","psychoanalysis","pulmonology","radiology","rehabilitation","rheumatology","robotics","science","security","sociology","statistics","surgery","systems","technology","television","theater","theology","theory","therapy","thermodynamics","toxicology","trigonometry","writing","zoology"]
 
 #returns a random word from a random list
 #off: allow offensive content (bool)
